@@ -1,3 +1,5 @@
+2004-02-06 Mariusz Woloszyn
+	* library.c: added more descriptive error message
 2004-02-01  Marcus Meissner  <marcus@jet.franken.de>
 
 	* Sony P-10 as reported by Fred Point.
